# rust-scratch-blockchain

./: .gitignore  Cargo.toml  README.md  rust-scratche-blockchain.code-workspace  rust-toolchain.toml  rustfmt.toml  sample-blocks.json  sample-err-mismatch-prevhash1.json  sample-err-mismatch-prevhash2.json  sample-on-block-noerror.json  sample-one-block-noerror.json  sample-someblock-two-account.json  sample-three-block-error-insufficientinputvalue.json  sample-three-block-noerror-of-insufficientinputvalue.json.json  sample-three-block-noerror.json  sample.json  travis.yml.bk
.github/workflows/: ci.yml  rust.yml  test.yml
file/: ClientTransaction.txt
library_utils/: Cargo.toml  README.md  calculate.rs  lib.rs  stepper.rs  stringify.rs  stringtou128.rs
series-one-test/: mod.rs  test-main.rs
src/: block.rs  blockchain.rs  blockchain_execute.rs  blockchain_executive.rs  de.rs  error.rs  factory.rs  hashable.rs  lib.rs  main.rs  rust-scratche-blockchain.code-workspace  sample.rs  transaction.rs
tests/: integration_test.rs  lib.rs  sample-test.rs  test-json-main-parser.rs  test-json-mian.rs  test-json-one-struct.rs  test-json-three-struct.rs  test-json-two-struct.rs  test-main-fetchdata.rs  test-main.rs
tests (copy)/: test.rs
tests/common/: mod.rs
tests/project/: blockchain.rs  hashable.rs  test-factory.rs  transaction.rs
utils/: Cargo.toml  calculate.rs  lib.rs  slicer.rs  stringify.rs  stringtou128.rs  ustringslicer.rs  ustrtou128.rs
