[package]
name = "rust-scratche-blockchain"
version = "0.1.0"
authors = ["Arman <arman2riazi@gmail.com>"]
edition = "2021"
readme = "README.md"
license = "MIT"

keywords = ["msrv", "rust-version", "toolchain", "find", "blockchain"]
categories = ["development-tools", "development-tools::cargo-plugins", "command-line-utilities"]

[package.metadata]
msrv="1.31.0"

#[build]
#target = "stable-x86_64-unknown-linux-gnu"

[lib]
name = "library_blockchain"
path = "src/lib.rs"

[[bin]]
name = "blockchain"
path = "src/main.rs"

#[features]
#unstable-doc-cfg = []

#[package.metadata.docs.rs]
#features = ["unstable-doc-cfg"]

[workspace]
members = [
    "utils"
]

[dependencies]
utils = { path = "./utils" }
# json output
json = "0.12.4"
# doc-cfg = { version = "0.1" }
hex = "0.3.2"
crypto-hash = "0.3.3"
serde_json = "1.0.81"
serde = { version = "1.0.137", features = ["derive"] }


[profile.dev]
opt-level=0
debug = true
rpath = false
lto = false
debug-assertions = true
codegen-units = 4

[profile.release]
opt-level=3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1

[profile.test]
opt-level = 1
debug = true
rpath = false
lto = false
debug-assertions = true
codegen-units = 4

[profile.bench]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1


# The documentation profile, used for `cargo doc`.
[profile.doc]
opt-level = 0
debug = 2
rpath = false
lto = false
debug-assertions = true
codegen-units = 1
panic = 'unwind'
incremental = true
overflow-checks = true

[dependencies.tracing-subscriber]
version = "0.3"
features = ["json"]

# Get the available rust versions
[dependencies.rust-releases]
version = "0.22.0"
default-features = false
features = ["rust-releases-rust-changelog"]