[package]
name = "blockchain-scratch-rust"
version = "0.1.0"
authors = ["Arman <armanriyazi.github.io@gmail.com>"]
description = "A scratched blockchain implementation"
edition = "2021"
readme = "README.md"
license = "MIT"
homepage = "https://armanriazi.github.io/site/public/programming/rust/rust-scratch-blockchain"
repository = "https://github.com/armanriazi/rust-scratch-blockchain"
keywords = ["msrv", "rust-version", "toolchain", "find", "blockchain","proof","dao","substrate","decentralized","cryptocurrency"]
categories = ["development-tools", "development-tools::cargo-plugins", "command-line-utilities"]

[package.metadata]
msrv="1.31.0"

#[build]
#target = "stable-x86_64-unknown-linux-gnu"

[lib]
name = "library_blockchain"
path = "src/lib.rs"

[[bin]]
name = "blockchain"
path = "src/main.rs"

#[features]
#unstable-doc-cfg = []

#[package.metadata.docs.rs]
#features = ["unstable-doc-cfg"]

[workspace]
members = [
    "utils"
]

[dev-dependencies]
proptest = "1"
env_logger = "0.9.0"
log = "0.4.0"
pretty_assertions = "1"
utils = { path = "./utils" }
concat-string = "1.0.1"
# json output
json = "0.12.4"
# doc-cfg = { version = "0.1" }
hex = "0.3.2"
crypto-hash = "0.3.3"
serde_json = "1.0.82"
serde = { version = "1.0.137", features = ["derive"] }
serde_derive = { version = "1.0.137"}

[dependencies]
log = "0.4.0"
env_logger = "0.9.0"
utils = { path = "./utils" }
concat-string = "1.0.1"
json = "0.12.4"
hex = "0.3.2"
crypto-hash = "0.3.3"
serde_json = "1.0.82"
serde = { version = "1.0.137", features = ["derive"] }
serde_derive = { version = "1.0.137"}


[profile.dev]
opt-level=0
debug = true
rpath = false
lto = false
debug-assertions = true
codegen-units = 4

[profile.release]
opt-level=3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1

[profile.test]
opt-level = 1
debug = true
rpath = false
lto = false
debug-assertions = true
codegen-units = 4

[profile.bench]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1


# The documentation profile, used for `cargo doc`.
[profile.doc]
opt-level = 0
debug = 2
rpath = false
lto = false
debug-assertions = true
codegen-units = 1
panic = 'unwind'
incremental = true
overflow-checks = true

[dependencies.tracing-subscriber]
version = "0.3"
features = ["json"]

# Get the available rust versions
[dependencies.rust-releases]
version = "0.22.0"
default-features = false
features = ["rust-releases-rust-changelog"]